<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Entourage</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <!-- Login View Strings -->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!-- Main Activity -->
    <string name="main_activity_display_message">Main Page</string>

    <!-- Sign Up View Strings -->
    <string name="userNameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="btnCreateAccount">Create Account</string>

    <!-- SplashScreen -->
    <color name="white">#FFFFFF</color>

    <string name="splashTitle">©2015 Vector Systems, LLC. All rights reserved.</string>

    <!-- User Page Strings -->
    <string name="fullname"> First Name </string>
    <string name="username"> User Name </string>
    <string name="email"> Email </string>
    <string name="city"> Your City </string>
    <string name="state"> Your State</string>
    <string name="password"> Password </string>
    <string name="join"> Join </string>
    <string name="profile"> Profile </string>

    <!-- Image Upload -->
    <string name="upload">Upload</string>
    <string name="CaptionHint">Write Caption</string>
    <string name="contentDescription">Image</string>
    <string name="btnTakePicture">Capture Image</string>
    <string name="btnCapture">Take Picture</string>
    <string name="btnRecordVideo">Record Video</string>
    <string name="or">(or)</string>
    <string name="btnUploadToServer">Upload to Server</string>

    <!--
         How can we make these fields cooler? without them sounding like stats in a database? 
    	Should we ask questions instead of using typical labels? should we animate the process so 
    	that it feels more like an experience than a 'survey'? 
    	SHOULD THIS COMMENT BE EXTRACTED AND PLACED IN A DESIGN DOC?
    -->
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="action_add_image">Add Image</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="menu_refresh">Refresh</string>
    <string name="empty_text">List is empty! Swipe down to refresh.</string>
    <string name="filler_text">Filler text</string>

</resources>