<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:i="http://schemas.android.com/apk/res/com.vector.entourage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:gravity="center_vertical"
    android:orientation="vertical" >
    
    <views.CircularImageView 
        android:id="@+id/profilePic"
        android:layout_width="170dip"
        android:layout_height="170dip"
        android:layout_gravity="center"
        android:layout_marginBottom="50dip"
        i:hasShadow="true"
        android:src="@drawable/owl3"/>
    

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userNameHint" 
        android:maxLines="1"
        android:focusable="true"
        android:inputType="text" >
		
        <requestFocus />
    </EditText>

    <EditText
        android:focusable="true"
        android:id="@+id/editTextEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType='textEmailAddress' />
    
    <EditText
        android:focusable="true"
        android:id="@+id/editTextCity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="text" />

    <EditText
        android:focusable="true"
        android:id="@+id/editTextState"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/state"
        android:inputType="text" />
    
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordHint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmPasswordHint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/btnCreateAccount" />

</LinearLayout>